--- a/tweeter/tweetapp/templates/tweet_form.html
+++ b/tweeter/tweetapp/templates/tweet_form.html
@@ -7,59 +7,63 @@ Tweeter Social Network
 {% block content %}
 <h1 class="text-center  mb-10">Wellcome to Tweeter</h1>
 
-<h2>
-    {% comment %} {% if form.instance.pk %} 
-    Edit Tweet 
-    {% else %}
-    Create a Tweet
-    {% endif %} {% endcomment %}
+{% comment %} <h2>{% if form.instance.pk %} 
+Edit Tweet 
+{% else %}
+Create a Tweet
+{% endif %} {% endcomment %}
     
 <style>
     /* custom.css */
-    .tweet-card .img-fluid {
-        width: 50px;
-        height: 50px;
-        object-fit: cover;
-        margin-right: 10px;
+    .container {
+        padding-top: 2rem;
+    }
+    .card-header {
+        background-color: #007bff;
     }
     
 </style>
 <!-- tweet_edit.html -->
 <div class="container mt-4">
-<div class="row justify-content-center">
-<div class="col-md-8">
-<div class="card mb-3">
-<div class="row g-0">
-<div class="col-auto p-3">
-<img src={{ tweet.photo.url|default:'/media/photo.png' }}
-class="img-fluid rounded-circle" alt="{{ tweet.user.username }}" style="width: 50px; height: 50px;">
-</div>
-<div class="col">
-    <div class="card-body">
-    <h5 class="card-title">{{ tweet.user.username }}</h5>
-    <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <div class="d-flex justify-content-end mt-3">
-    <a href="{% url 'tweet_list' %}" class="btn btn-secondary me-2">Cancel</a>
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <h1 class="text-center">Edit Tweet</h1>
+                    <div class="col-auto p-3">
+             {% if tweet.photo %}
+            <img src="{{ tweet.photo.url }}" class="img-fluid rounded-circle" alt="{{ tweet.user.username }}" style="width: 50px; height: 50px;">
+                        {% else %}
+                            <img src="{{ MEDIA_URL }}photos.png" class="img-fluid rounded-circle" alt="{{ tweet.user.username }}" style="width: 50px; height: 50px;">
+                        {% endif %}
+                    </div>
+                    <div class="col">
+                        <div class="card-body">
+         <h5 class="card-title">{{ tweet.user.username }}</h5>
+            <form method="post">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                    <div class="d-flex justify-content-end mt-3">
+            <a href="{% url 'tweet_list' %}" class="btn btn-secondary me-2">Cancel</a>
     <button type="submit" class="btn btn-primary">Save Changes</button>
-</div>
-</form>
-</div>
-</div>
+            </div>
+        </form>
+    </div>
+    </div>
 </div>
 </div>
 </div>
 </div>
 </div>
 
-
-   
-</h2>
+{% comment %} </h2> {% endcomment %}
 <a href="{%url 'tweet_list'%}" class="btn btn-success">Back to tweet list</a>
 
 
 {% endblock %}
+
+
+   
 
 
 
