--- a/tweeter/templates/base.html
+++ b/tweeter/templates/base.html
@@ -14,25 +14,21 @@
     {% endblock %}
     </title>
 </head>
-<body class="bg-dark">
+<body class="bg-dark ">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Tweeter</a>
+          <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Tweeter</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
+              
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
+               
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -40,14 +36,31 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
+             
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+            <div>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+          
+            </div>
+            <a class="btn btn-primary mx-3" href="{% url "tweet_list"%}">
+                         Tweet Home
+            </a>
+            {% if user.is_authenticated %}
+            <form action="{% url 'logout'%}" method="post">
+              {% csrf_token %}
+              <button class="btn btn-danger" type="submit">Logout</button>
             </form>
+            {% else %}
+            <a class="btn btn-warning mx-2" href="{% url "register"%}">
+              Register
+            </a>
+            <a class="btn btn-success mx-2" href="{% url "login"%}">
+              Login
+            </a>
+            {% endif %}
           </div>
         </div>
       </nav>
