--- a/tweeter/tweetapp/templates/tweet_list.html
+++ b/tweeter/tweetapp/templates/tweet_list.html
@@ -22,22 +22,24 @@ Create a Tweet
 
 
 <!-- _tweet_card.html -->
-<div  class="card mt-3">
+<div  class="card mt-3 border-primary rounded-3">
 {% for tweet in tweets %}
 <div class="row g-1">
     <div class="col-auto">
         <img src="{{ tweet.photo.url }}" class="img-fluid rounded-circle" alt="" style="width: 50px; height: 50px;">
     </div>
     <div class="col">
-         <div class="card-body">
+         <div class="card-body ">
         <h5 class="card-title">{{ tweet.user.username }}</h5>
         <p class="card-text">{{ tweet.text|linebreaks }}</p>
         <p class="card-text"><small class="text-muted">{{ tweet.created_at|date:"F j, Y, g:i a" }}</small></p>
         <div class="d-flex justify-content-between align-items-center">
         <span class="text-muted">👍 {{ tweet.likes }}</span>
         <div>
+            {% if tweet.user == user %}
         <a href="{% url 'tweet_edit' tweet.id %}" class="btn btn-primary">Edit</a>
          <a href="{% url 'tweet_delete' tweet.id %}" class="btn btn-danger">Delete</a>
+        {% endif %}
     </div>
     </div>
     </div>
